[gd_scene load_steps=4 format=3 uid="uid://daom27lon73h8"]

[ext_resource type="Script" uid="uid://cwtec351y5i2q" path="res://scripts/main menu.gd" id="1_yqeox"]
[ext_resource type="PackedScene" uid="uid://cyi7otpakwjkg" path="res://scenes/game/game.tscn" id="2_vjb58"]
[ext_resource type="PackedScene" uid="uid://eg815tvcyvj2" path="res://scenes/game/ui/settings.tscn" id="3_bqqt6"]

[node name="main menu" type="Node2D" node_paths=PackedStringArray("settings", "options")]
script = ExtResource("1_yqeox")
game_scene = ExtResource("2_vjb58")
settings = NodePath("Settings")
options = NodePath("VBoxContainer")

[node name="Settings" parent="." instance=ExtResource("3_bqqt6")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 406.0
offset_top = 315.0
offset_right = 498.0
offset_bottom = 315.0
grow_horizontal = 1
grow_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 505.0
offset_top = 303.0
offset_right = 597.0
offset_bottom = 404.0

[node name="start game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "start game"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "options"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"

[connection signal="pressed" from="VBoxContainer/start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
